fix: icon shaking problem on safari nav bar (#23)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -342,6 +342,15 @@ body {
   }
 }
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
+}
+
 #tbl-tooltip[data-side="top"] {
   animation-name: slideDownAndFade;
 }
